# fin-case-agent

./: .dockerignore  .env.example  .env.ollama.example  .gitignore  DOCKER_STARTUP.md  Dockerfile  FIN_NETWORK_SETUP.md  FIX_HOST_AGENT_FLOW.md  IMPROVEMENT_SUMMARY.md  IMPROVEMENT_SUMMARY_DUAL_PROXY.md  Makefile  OLLAMA_QUICKSTART.md  README.md  app.py  chainlit.db  chainlit.md  config_loader.sh  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
agents/: BaseAgent.py  ChatManager.py  CodeExecutorAgent.py  ConstraintCustomizationAgent.py  ConstraintCustomizationTool.py  CustomizeConstraintAgent.py  DeepAnalysisAgent.py  HostAgent.py  LegalRetrievalAgent.py  SearchAgent.py  SearchCaseAgent.py  SearchLawAgent.py  SummaryAgent.py  __init__.py
data_preprocess/: Preprocessing_Guildline.md  automatic_find_article.py  case.json  case_crawer.py  preprocess_article.py  processed_cases.csv  save_law_article_to_database.py  search_deep_laws.py
database_utility/: cleanup_legal_cases.py  debug_chroma_collections.py  deep_clean_chroma.py  diagnose_chroma.py  embed_cases_to_chroma.py  fix_chroma_collection.py  init_db.py  test_single_embed.py
find_optimize_result/: Z3ConstraintCustomization.py  json2z3.py  optimize_single_case.py
outputs/: case_0.constraint_spec.json  case_0.facts.json  case_0.model.txt  case_0.smt2  case_0.stats.json  case_0.varspecs.json  case_1.facts.json  case_1.smt2  case_1.stats.json  case_10.model.txt  case_10.smt2  case_10.stats.json  case_100.smt2  case_100.stats.json  case_101.model.txt  case_101.smt2  case_101.stats.json  case_102.facts.json  (+2492 more)
(+66 files in other folders)
