[project]
name = "uicompliance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "autogen>=0.9.10",
    "chainlit>=2.8.3",
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "flagembedding>=1.3.5",
    "greenlet>=3.2.4",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.8",
    "pip>=25.3",
    "rank-bm25>=0.2.2",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "z3-solver>=4.15.3.0",
]
